# haskell-hdfs-thrift-client

./: .gitignore  README.md  hdfs-thrift-client.cabal
app/: HdfsTester.hs
src-gen-thrift/: Hadoopfs_Consts.hs  Hadoopfs_Types.hs  ThriftHadoopFileSystem.hs  ThriftHadoopFileSystem_Client.hs  ThriftHadoopFileSystem_Iface.hs
src/System/HDFS/: HDFSClient.hs  InternalUtils.hs
test/: LocationSplittingTest.hs
